# pgxfer

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: check.yml  docker-publish.yml  tagcheck.yml
src/pgxfer/: __main__.py  config.py  dump_restore.py
tests/testpgxfer/: conftest.py  test_main.py
